java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting6/VariableUsedBeforeAssignmentWithParenthesis.java


class Unassigned {
  public final int a;
  public int b;

  Unassigned(int value) {
    b = <error descr="Variable '(this).a' might not have been initialized">(this).a</error>;
    a = value;
  }
}